# epson-rs232-projector-network-bridge

./: Cargo.toml  EpsonNetworkRS232ProjectorClient.ts  EpsonNetworkRS232ProjectorClientImpl.ts  MockEpsonNetworkRS232ProjectorClient.ts  README.md  index.ts  package-lock.json  package.json  test.ts  typings.json
.devcontainer/: Dockerfile
js-src/: EpsonNetworkRS232ProjectorClient.ts  EpsonNetworkRS232ProjectorClientButton.ts  EpsonNetworkRS232ProjectorClientImpl.ts  test.ts
scripts/: epson-projector-network-bridge.service  raspberry-pi-setup.sh  read-only-fs.sh  unisonht-epson-projector.service
src/: EpsonNetworkRS232Projector.ts  EpsonNetworkRS232ProjectorClient.ts  EpsonNetworkRS232ProjectorClientImpl.ts  EpsonNetworkRS232ProjectorClientInput.ts  EpsonNetworkRS232ProjectorClientMock.ts  EpsonNetworkRS232ProjectorPowerState.ts  EpsonNetworkRS232ProjectorStatus.ts  config.rs  epson_codec.rs  epson_serial_port.rs  http.rs  index.ts  logger.rs  main.rs  mock_stream.rs  state.rs  test.ts
src/routes/: get_power_status.rs  get_status.rs  mod.rs  post_power.rs  post_source.rs
