[package]
name = "unisonht-epson-network-rs232-projector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
log = "0.4.22"
log4rs = "1.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yml = "0.0.12"
serialport = { version = "4.5.1", features = ["usbportinfo-interface"] }
tokio = { version = "1.40.0", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
