[package]
name = "unisonht-epson-network-rs232-projector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
bytes = "1.7.2"
futures = "0.3.31"
log = "0.4.22"
log4rs = "1.3.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yml = "0.0.12"
tokio = { version = "1.40.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["libudev"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
serialport = { version = "*", features = ["usbportinfo-interface"] }
tokio-stream = "0.1.16"
